# Kneron

./: .gitignore  README.md
kneron_plus/: CMakeLists.txt
kneron_plus/app_lib/yolo/src/: kp_app_yolo.c
kneron_plus/ex_common/: helper_functions.h  postprocess.c  postprocess.h
kneron_plus/examples/generic_command/: generic_command.c
kneron_plus/examples/kl520_demo_customize_inf_single_model_debug/: kl520_demo_customize_inf_single_model_debug.c
kneron_plus/examples/kl520_demo_generic_image_inference_post_yolo/: kl520_demo_generic_image_inference_post_yolo.c
kneron_plus/examples/kl630_demo_customize_inf_single_model/: kl630_demo_customize_inf_single_model.h
kneron_plus/examples/kl720_demo_generic_image_inference_fifoq_config/: kl720_demo_generic_image_inference_fifoq_config.c
kneron_plus/examples/kl720_demo_generic_image_inference_flash_model/: kl720_demo_generic_image_inference_flash_model.c
kneron_plus/examples_legacy/kl520_demo_generic_inference_bypass_pre_proc/: kl520_demo_generic_inference_bypass_pre_proc.c
kneron_plus/examples_legacy/kl520_demo_generic_inference_multithread/: kl520_demo_generic_inference_multithread.c
kneron_plus/examples_legacy/kl720_demo_cam_generic_inference_drop_frame/: kl720_demo_cam_generic_inference_drop_frame.cpp
kneron_plus/examples_model_zoo/kl520_kn-model-zoo_generic_image_inference_post_yolov5/: kl520_kn-model-zoo_generic_image_inference_post_yolov5.c
kneron_plus/firmware_development/KL520/firmware/lib/: kdp2_ncpu_model_ppp.lib
kneron_plus/firmware_development/KL520/firmware/mdw/camera/: kmdw_camera.c
kneron_plus/firmware_development/KL520/firmware/mdw/display/: kmdw_display.c
kneron_plus/firmware_development/KL520/firmware/mdw/include/: kmdw_memxfer.h  kmdw_power_manager.h  kmdw_system.h
kneron_plus/firmware_development/KL520/firmware/mdw/inference/: dual_fifo2.c
kneron_plus/firmware_development/KL520/firmware/mdw/memory/: kmdw_memory.c
kneron_plus/firmware_development/KL520/firmware/mdw/usb_companion/: kdp2_cmd_handler_520.c  kdp2_usb_companion.c  kdp2_usb_log.c  usbd_hal_520.c
kneron_plus/firmware_development/KL520/firmware/mdw/usbh/: kmdw_usbh.c  kmdw_uvc.c
kneron_plus/firmware_development/KL720/firmware/include/: version.h
kneron_plus/firmware_development/KL720/firmware/lib/: kmdw_dfs_fuzzy_720.lib
kneron_plus/firmware_development/KL720/firmware/mdw/camera/: kmdw_camera.c  kmdw_isp.c
kneron_plus/firmware_development/KL720/firmware/mdw/console/: kmdw_console.c
kneron_plus/firmware_development/KL720/firmware/mdw/include/: kdp2_cmd.h  kmdw_console.h  kmdw_jpeg.h  kmdw_power_manager.h  kmdw_ssp.h  kmdw_usbh2.h
kneron_plus/firmware_development/KL720/firmware/mdw/inference/: dual_fifo2.c
kneron_plus/firmware_development/KL720/firmware/mdw/ipc/: kmdw_ipc.c
kneron_plus/firmware_development/KL720/firmware/mdw/stereo_depth/: kmdw_stereo_depth.c
kneron_plus/firmware_development/KL720/firmware/mdw/system/: kmdw_system.c
kneron_plus/firmware_development/KL720/firmware/mdw/tdc/: kmdw_tdc.c
kneron_plus/include/: kp_core.h  kp_inference.h  kp_version.h
kneron_plus/include/legacy/: kp_struct_v1.h
kneron_plus/python/example/: KL520DemoCamGenericImageInferenceDropFrame.py  KL520DemoGenericImageInferenceFifoqConfig.py  KL520DemoGenericImageInferenceFlashModel.py  KL630DemoGenericDataInference.py  KL630DemoGenericImageInferenceFlashModel.py  KL720DemoCamGenericImageInference.py  KL720DemoCamGenericImageInferenceDropFrame.py  KL720DemoGenericImageInferenceFifoqConfig.py
kneron_plus/python/example/utils/: ExampleHelper.py  __init__.py
kneron_plus/python/example_legacy/: KL520DemoCamGenericInferenceDropFrame.py  KL520DemoGenericInference.py  KL720DemoGenericInference.py
kneron_plus/python/example_model_zoo/: KL520KnModelZooGenericImageInferenceYolov5.py  KL720KnModelZooGenericImageInferenceFcos.py
kneron_plus/python/package/raspbianpi4/: KneronPLUS-2.2.0-py3-none-any.whl
kneron_plus/python/package/windows/: KneronPLUS-2.2.0-py3-none-any.whl
kneron_plus/res/config/stereodepth/: result_analyzer_readme.md
kneron_plus/res/models/KL520/ssd_fd_lm/: models_520.nef
kneron_plus/src/: CMakeLists.txt  kp_errstring.c  kp_inference.c  kp_set_key.c  kp_update_flash.c  kp_usb.c  model_descriptor_builder.c
kneron_plus/src/include/soc_common/: kdp2_inf_generic_raw.h  kdp2_ipc_cmd.h
kneron_plus/src/python_wrapper/src/: kp_python_wrap.c
kneron_plus/tools/DFUT/DFUT_console/: DFUT_console.cpp
kneron_plus/tools/DFUT/DFUT_core/: KneronDFUT.h
kneron_plus_v2.2.0/kneron_plus/app_lib/yolo/: CMakeLists.txt
kneron_plus_v2.2.0/kneron_plus/examples/install_driver_windows/: CMakeLists.txt  install_driver_windows.c
kneron_plus_v2.2.0/kneron_plus/examples/kl720_demo_user_define_api/: CMakeLists.txt  kl720_demo_user_define_api.c
kneron_plus_v2.2.0/kneron_plus/examples_model_zoo/: CMakeLists.txt
kneron_plus_v2.2.0/kneron_plus/examples_model_zoo/kl520_kn-model-zoo_generic_image_inference_classification/: kl520_kn-model-zoo_generic_image_inference_classification.c
kneron_plus_v2.2.0/kneron_plus/examples_model_zoo/kl720_kn-model-zoo_generic_image_inference_post_yolov5/: CMakeLists.txt
kneron_plus_v2.3.0/kneron_plus/examples/generic_command/: CMakeLists.txt  generic_command.c
kneron_plus_v2.3.0/kneron_plus/examples_legacy/kl720_demo_cam_generic_inference_drop_frame/: CMakeLists.txt
kneron_plus_v2.3.0/kneron_plus/src/: CMakeLists.txt  kne_reader.c  kp_core.c  kp_errstring.c  kp_inference.c  kp_update_flash.c  kp_usb.c  model_descriptor_builder.c  model_descriptor_copier.c  model_reader_utils.c  nef_reader.c  setup_reader.c
kneron_plus_v2.3.0/kneron_plus/src/include/local/: KL720_usb_minion.h  flatbuffers_common_reader.h  internal_func.h  kneron_kne_c_reader.h  kneron_nef_reader.h  kneron_setup_reader.h  kp_internal.h
kneron_plus_v2.3.0/kneron_plus/src/include/soc_common/: kdp2_inf_generic_raw.h  kdp2_ipc_cmd.h
kneron_plus_v2.3.0/kneron_plus/src/legacy/: kp_inference_v1.c
kneron_plus_v2.3.0/kneron_plus/tools/DFUT/DFUT_console/: CMakeLists.txt  DFUT_console.cpp
(+710 files in other folders)
